# web_ical

./: Cargo.toml  LICENSE  README.md  lib.rs  main.rs
benches/: bench.rs
src/: lib.rs  main.rs
